Complete styles for new entry and new html structure with js

--- a/style/moodle.css
+++ b/style/moodle.css
@@ -1119,6 +1119,43 @@ h5 {
 }
 .custom_form .item_custom .cnt_row9 {
   display: grid;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: 18px auto auto;
+  grid-auto-columns: 1fr;
+  gap: 4px 4px;
+  grid-auto-flow: row;
+  justify-content: stretch;
+  align-content: stretch;
+  justify-item_customs: stretch;
+  align-item_customs: stretch;
+  grid-template-areas: "field cta" "value-cont value-cont" "description-cont description-cont";
+}
+.custom_form .item_custom .cnt_row9 .field {
+  grid-area: field;
+}
+.custom_form .item_custom .cnt_row9 .field h6 {
+  margin-left: 24px;
+  font-size: 12px;
+  color: #5c3873;
+}
+.custom_form .item_custom .cnt_row9 .cta {
+  align-self: center;
+  grid-area: cta;
+}
+.custom_form .item_custom .cnt_row9 .cta .i-arrow {
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+}
+.custom_form .item_custom .cnt_row9 .cta .down {
+  background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_472)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M12.4425 6.4425L9 9.8775L5.5575 6.4425L4.5 7.5L9 12L13.5 7.5L12.4425 6.4425Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_472"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
+}
+.custom_form .item_custom .cnt_row9 .cta .up {
+  background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
+}
+.custom_form .item_custom .cnt_row9 .value-cont {
+  grid-area: value-cont;
+  display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 0px 8px;
@@ -1127,10 +1164,10 @@ h5 {
   justify-item_customs: stretch;
   align-item_customs: stretch;
 }
-.custom_form .item_custom .cnt_row9 .col1 {
+.custom_form .item_custom .cnt_row9 .value-cont .col1 {
   display: grid;
-  grid-template-columns: 1fr auto;
-  grid-template-rows: 18px 36.47px auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: 18px auto;
   grid-auto-columns: 1fr;
   gap: 4px 4px;
   grid-auto-flow: row;
@@ -1138,50 +1175,22 @@ h5 {
   align-content: stretch;
   justify-item_customs: stretch;
   align-item_customs: stretch;
-  grid-template-areas: "field cta" "value value" "description-cont description-cont";
+  grid-template-areas: "field" "value";
 }
-.custom_form .item_custom .cnt_row9 .col1 .field {
+.custom_form .item_custom .cnt_row9 .value-cont .col1 .field {
   grid-area: field;
 }
-.custom_form .item_custom .cnt_row9 .col1 .field h6 {
+.custom_form .item_custom .cnt_row9 .value-cont .col1 .field h6 {
   font-size: 12px;
   color: #5c3873;
 }
-.custom_form .item_custom .cnt_row9 .col1 .cta {
-  align-self: center;
-  grid-area: cta;
-}
-.custom_form .item_custom .cnt_row9 .col1 .cta .i-arrow {
-  width: 18px;
-  height: 18px;
-  cursor: pointer;
-}
-.custom_form .item_custom .cnt_row9 .col1 .cta .down {
-  background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_472)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M12.4425 6.4425L9 9.8775L5.5575 6.4425L4.5 7.5L9 12L13.5 7.5L12.4425 6.4425Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_472"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-}
-.custom_form .item_custom .cnt_row9 .col1 .cta .up {
-  background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-}
-.custom_form .item_custom .cnt_row9 .col1 .value {
+.custom_form .item_custom .cnt_row9 .value-cont .col1 .value {
   grid-area: value;
 }
-.custom_form .item_custom .cnt_row9 .col1 .description-cont {
-  grid-area: description-cont;
-  display: none;
-  padding-left: 24px;
-}
-.custom_form .item_custom .cnt_row9 .col1 .description-cont .description {
-  width: 100%;
-  height: 100%;
-  border-radius: 0.25rem;
-  padding: 4px 8px;
-  background-color: #DDD3E1;
-  color: #5c3873;
-}
-.custom_form .item_custom .cnt_row9 .col2 {
+.custom_form .item_custom .cnt_row9 .value-cont .col2 {
   display: grid;
-  grid-template-columns: 1fr auto;
-  grid-template-rows: 18px 36.47px auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: 18px auto;
   grid-auto-columns: 1fr;
   gap: 4px 4px;
   grid-auto-flow: row;
@@ -1189,50 +1198,22 @@ h5 {
   align-content: stretch;
   justify-item_customs: stretch;
   align-item_customs: stretch;
-  grid-template-areas: "field cta" "value value" "description-cont description-cont";
+  grid-template-areas: "field" "value";
 }
-.custom_form .item_custom .cnt_row9 .col2 .field {
+.custom_form .item_custom .cnt_row9 .value-cont .col2 .field {
   grid-area: field;
 }
-.custom_form .item_custom .cnt_row9 .col2 .field h6 {
+.custom_form .item_custom .cnt_row9 .value-cont .col2 .field h6 {
   font-size: 12px;
   color: #5c3873;
 }
-.custom_form .item_custom .cnt_row9 .col2 .cta {
-  align-self: center;
-  grid-area: cta;
-}
-.custom_form .item_custom .cnt_row9 .col2 .cta .i-arrow {
-  width: 18px;
-  height: 18px;
-  cursor: pointer;
-}
-.custom_form .item_custom .cnt_row9 .col2 .cta .down {
-  background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_472)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M12.4425 6.4425L9 9.8775L5.5575 6.4425L4.5 7.5L9 12L13.5 7.5L12.4425 6.4425Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_472"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-}
-.custom_form .item_custom .cnt_row9 .col2 .cta .up {
-  background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-}
-.custom_form .item_custom .cnt_row9 .col2 .value {
+.custom_form .item_custom .cnt_row9 .value-cont .col2 .value {
   grid-area: value;
 }
-.custom_form .item_custom .cnt_row9 .col2 .description-cont {
-  grid-area: description-cont;
-  display: none;
-  padding-left: 24px;
-}
-.custom_form .item_custom .cnt_row9 .col2 .description-cont .description {
-  width: 100%;
-  height: 100%;
-  border-radius: 0.25rem;
-  padding: 4px 8px;
-  background-color: #DDD3E1;
-  color: #5c3873;
-}
-.custom_form .item_custom .cnt_row9 .col3 {
+.custom_form .item_custom .cnt_row9 .value-cont .col3 {
   display: grid;
-  grid-template-columns: 1fr auto;
-  grid-template-rows: 18px 36.47px auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: 18px auto;
   grid-auto-columns: 1fr;
   gap: 4px 4px;
   grid-auto-flow: row;
@@ -1240,50 +1221,22 @@ h5 {
   align-content: stretch;
   justify-item_customs: stretch;
   align-item_customs: stretch;
-  grid-template-areas: "field cta" "value value" "description-cont description-cont";
+  grid-template-areas: "field" "value";
 }
-.custom_form .item_custom .cnt_row9 .col3 .field {
+.custom_form .item_custom .cnt_row9 .value-cont .col3 .field {
   grid-area: field;
 }
-.custom_form .item_custom .cnt_row9 .col3 .field h6 {
+.custom_form .item_custom .cnt_row9 .value-cont .col3 .field h6 {
   font-size: 12px;
   color: #5c3873;
 }
-.custom_form .item_custom .cnt_row9 .col3 .cta {
-  align-self: center;
-  grid-area: cta;
-}
-.custom_form .item_custom .cnt_row9 .col3 .cta .i-arrow {
-  width: 18px;
-  height: 18px;
-  cursor: pointer;
-}
-.custom_form .item_custom .cnt_row9 .col3 .cta .down {
-  background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_472)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M12.4425 6.4425L9 9.8775L5.5575 6.4425L4.5 7.5L9 12L13.5 7.5L12.4425 6.4425Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_472"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-}
-.custom_form .item_custom .cnt_row9 .col3 .cta .up {
-  background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-}
-.custom_form .item_custom .cnt_row9 .col3 .value {
+.custom_form .item_custom .cnt_row9 .value-cont .col3 .value {
   grid-area: value;
 }
-.custom_form .item_custom .cnt_row9 .col3 .description-cont {
-  grid-area: description-cont;
-  display: none;
-  padding-left: 24px;
-}
-.custom_form .item_custom .cnt_row9 .col3 .description-cont .description {
-  width: 100%;
-  height: 100%;
-  border-radius: 0.25rem;
-  padding: 4px 8px;
-  background-color: #DDD3E1;
-  color: #5c3873;
-}
-.custom_form .item_custom .cnt_row9 .col4 {
+.custom_form .item_custom .cnt_row9 .value-cont .col4 {
   display: grid;
-  grid-template-columns: 1fr auto;
-  grid-template-rows: 18px 36.47px auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: 18px auto;
   grid-auto-columns: 1fr;
   gap: 4px 4px;
   grid-auto-flow: row;
@@ -1291,58 +1244,43 @@ h5 {
   align-content: stretch;
   justify-item_customs: stretch;
   align-item_customs: stretch;
-  grid-template-areas: "field cta" "value value" "description-cont description-cont";
+  grid-template-areas: "field" "value";
 }
-.custom_form .item_custom .cnt_row9 .col4 .field {
+.custom_form .item_custom .cnt_row9 .value-cont .col4 .field {
   grid-area: field;
 }
-.custom_form .item_custom .cnt_row9 .col4 .field h6 {
+.custom_form .item_custom .cnt_row9 .value-cont .col4 .field h6 {
   font-size: 12px;
   color: #5c3873;
 }
-.custom_form .item_custom .cnt_row9 .col4 .cta {
-  align-self: center;
-  grid-area: cta;
-}
-.custom_form .item_custom .cnt_row9 .col4 .cta .i-arrow {
-  width: 18px;
-  height: 18px;
-  cursor: pointer;
-}
-.custom_form .item_custom .cnt_row9 .col4 .cta .down {
-  background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_472)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M12.4425 6.4425L9 9.8775L5.5575 6.4425L4.5 7.5L9 12L13.5 7.5L12.4425 6.4425Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_472"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-}
-.custom_form .item_custom .cnt_row9 .col4 .cta .up {
-  background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-}
-.custom_form .item_custom .cnt_row9 .col4 .value {
+.custom_form .item_custom .cnt_row9 .value-cont .col4 .value {
   grid-area: value;
 }
-.custom_form .item_custom .cnt_row9 .col4 .description-cont {
-  grid-area: description-cont;
-  display: none;
-  padding-left: 24px;
-}
-.custom_form .item_custom .cnt_row9 .col4 .description-cont .description {
-  width: 100%;
-  height: 100%;
-  border-radius: 0.25rem;
-  padding: 4px 8px;
-  background-color: #DDD3E1;
-  color: #5c3873;
-}
-.custom_form .item_custom .cnt_row9 .btn-group {
+.custom_form .item_custom .cnt_row9 .value-cont .btn-group {
   visibility: hidden;
 }
-.custom_form .item_custom .cnt_row9 .fm-empty-container {
+.custom_form .item_custom .cnt_row9 .value-cont .fm-empty-container {
   padding-top: 50px;
 }
-.custom_form .item_custom .cnt_row9 .fp-restrictions,
-.custom_form .item_custom .cnt_row9 .dndupload-message {
+.custom_form .item_custom .cnt_row9 .value-cont .fp-restrictions,
+.custom_form .item_custom .cnt_row9 .value-cont .dndupload-message {
   font-size: 12px;
 }
-.custom_form .item_custom .cnt_row9 .dndupload-arrow {
+.custom_form .item_custom .cnt_row9 .value-cont .dndupload-arrow {
   height: 50px;
+}
+.custom_form .item_custom .cnt_row9 .description-cont {
+  grid-area: description-cont;
+  display: none;
+  padding-left: 24px;
+}
+.custom_form .item_custom .cnt_row9 .description-cont .description {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.25rem;
+  padding: 4px 8px;
+  background-color: #DDD3E1;
+  color: #5c3873;
 }
 
 .navbar.fixed-top {
