--- a/style/scss/layouts/_addentry.scss
+++ b/style/scss/layouts/_addentry.scss
@@ -342,56 +342,56 @@
         "value value"
         "description-cont description-cont";
 
-        .field {
-          grid-area: field;
-  
-          h6 {
-            margin-left: 24px;
-            font-size: 12px;
-            color: $primary;
-          }
+      .field {
+        grid-area: field;
+
+        h6 {
+          margin-left: 24px;
+          font-size: 12px;
+          color: $primary;
         }
-  
-        .cta {
-          align-self: center;
-          grid-area: cta;
-  
-          .i-arrow {
-            width: 18px;
-            height: 18px;
-            cursor: pointer;
-          }
-  
-          .down {
-            background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_472)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M12.4425 6.4425L9 9.8775L5.5575 6.4425L4.5 7.5L9 12L13.5 7.5L12.4425 6.4425Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_472"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-          }
-  
-          .up {
-            background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-          }
+      }
+
+      .cta {
+        align-self: center;
+        grid-area: cta;
+
+        .i-arrow {
+          width: 18px;
+          height: 18px;
+          cursor: pointer;
         }
-  
-        .value {
-          grid-area: value;
-  
-          select {
-            width: calc(100% - 24px) !important;
-          }
+
+        .down {
+          background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_472)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M12.4425 6.4425L9 9.8775L5.5575 6.4425L4.5 7.5L9 12L13.5 7.5L12.4425 6.4425Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_472"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
         }
-  
-        .description-cont {
-          grid-area: description-cont;
-          display: none;
-          padding-left: 24px;
-          .description {
-            width: 100%;
-            height: 100%;
-            border-radius: $border-radius;
-            padding: 4px 8px;
-            background-color: $navbar-bg;
-            color: $primary;
-          }
+
+        .up {
+          background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
         }
+      }
+
+      .value {
+        grid-area: value;
+
+        select {
+          width: calc(100% - 24px) !important;
+        }
+      }
+
+      .description-cont {
+        grid-area: description-cont;
+        display: none;
+        padding-left: 24px;
+        .description {
+          width: 100%;
+          height: 100%;
+          border-radius: $border-radius;
+          padding: 4px 8px;
+          background-color: $navbar-bg;
+          color: $primary;
+        }
+      }
     }
 
     // Year of completion & Author
@@ -450,7 +450,7 @@
             background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
           }
         }
-        
+
         .value {
           grid-area: value;
 
@@ -824,285 +824,210 @@
     // Files
     .cnt_row9 {
       display: grid;
+      grid-template-columns: 1fr auto;
+      grid-template-rows: 18px auto auto;
       grid-auto-columns: 1fr;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      gap: 0px 8px;
+      gap: 4px 4px;
+      grid-auto-flow: row;
       justify-content: stretch;
       align-content: stretch;
       justify-item_customs: stretch;
       align-item_customs: stretch;
+      grid-template-areas:
+        "field cta"
+        "value-cont value-cont"
+        "description-cont description-cont";
 
-      // EN
-      .col1 {
+      .field {
+        grid-area: field;
+
+        h6 {
+          margin-left: 24px;
+          font-size: 12px;
+          color: $primary;
+        }
+      }
+
+      .cta {
+        align-self: center;
+        grid-area: cta;
+
+        .i-arrow {
+          width: 18px;
+          height: 18px;
+          cursor: pointer;
+        }
+
+        .down {
+          background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_472)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M12.4425 6.4425L9 9.8775L5.5575 6.4425L4.5 7.5L9 12L13.5 7.5L12.4425 6.4425Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_472"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
+        }
+
+        .up {
+          background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
+        }
+      }
+
+      .value-cont {
+        grid-area: value-cont;
         display: grid;
-        grid-template-columns: 1fr auto;
-        grid-template-rows: 18px 36.47px auto;
         grid-auto-columns: 1fr;
-        gap: 4px 4px;
-        grid-auto-flow: row;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 0px 8px;
         justify-content: stretch;
         align-content: stretch;
         justify-item_customs: stretch;
         align-item_customs: stretch;
-        grid-template-areas:
-          "field cta"
-          "value value"
-          "description-cont description-cont";
 
-        .field {
-          grid-area: field;
+        // EN
+        .col1 {
+          display: grid;
+          grid-template-columns: 1fr;
+          grid-template-rows: 18px auto;
+          grid-auto-columns: 1fr;
+          gap: 4px 4px;
+          grid-auto-flow: row;
+          justify-content: stretch;
+          align-content: stretch;
+          justify-item_customs: stretch;
+          align-item_customs: stretch;
+          grid-template-areas:
+            "field"
+            "value";
 
-          h6 {
-            font-size: 12px;
-            color: $primary;
+          .field {
+            grid-area: field;
+
+            h6 {
+              font-size: 12px;
+              color: $primary;
+            }
+          }
+
+          .value {
+            grid-area: value;
           }
         }
 
-        .cta {
-          align-self: center;
-          grid-area: cta;
+        // ES
+        .col2 {
+          display: grid;
+          grid-template-columns: 1fr;
+          grid-template-rows: 18px auto;
+          grid-auto-columns: 1fr;
+          gap: 4px 4px;
+          grid-auto-flow: row;
+          justify-content: stretch;
+          align-content: stretch;
+          justify-item_customs: stretch;
+          align-item_customs: stretch;
+          grid-template-areas:
+            "field"
+            "value";
 
-          .i-arrow {
-            width: 18px;
-            height: 18px;
-            cursor: pointer;
+          .field {
+            grid-area: field;
+
+            h6 {
+              font-size: 12px;
+              color: $primary;
+            }
           }
 
-          .down {
-            background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_472)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M12.4425 6.4425L9 9.8775L5.5575 6.4425L4.5 7.5L9 12L13.5 7.5L12.4425 6.4425Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_472"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-          }
-
-          .up {
-            background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-          }
-        }
-
-        .value {
-          grid-area: value;
-        }
-
-        .description-cont {
-          grid-area: description-cont;
-          display: none;
-          padding-left: 24px;
-          .description {
-            width: 100%;
-            height: 100%;
-            border-radius: $border-radius;
-            padding: 4px 8px;
-            background-color: $navbar-bg;
-            color: $primary;
-          }
-        }
-      }
-
-      // ES
-      .col2 {
-        display: grid;
-        grid-template-columns: 1fr auto;
-        grid-template-rows: 18px 36.47px auto;
-        grid-auto-columns: 1fr;
-        gap: 4px 4px;
-        grid-auto-flow: row;
-        justify-content: stretch;
-        align-content: stretch;
-        justify-item_customs: stretch;
-        align-item_customs: stretch;
-        grid-template-areas:
-          "field cta"
-          "value value"
-          "description-cont description-cont";
-
-        .field {
-          grid-area: field;
-
-          h6 {
-            font-size: 12px;
-            color: $primary;
+          .value {
+            grid-area: value;
           }
         }
 
-        .cta {
-          align-self: center;
-          grid-area: cta;
+        // FR
+        .col3 {
+          display: grid;
+          grid-template-columns: 1fr;
+          grid-template-rows: 18px auto;
+          grid-auto-columns: 1fr;
+          gap: 4px 4px;
+          grid-auto-flow: row;
+          justify-content: stretch;
+          align-content: stretch;
+          justify-item_customs: stretch;
+          align-item_customs: stretch;
+          grid-template-areas:
+            "field"
+            "value";
 
-          .i-arrow {
-            width: 18px;
-            height: 18px;
-            cursor: pointer;
+          .field {
+            grid-area: field;
+
+            h6 {
+              font-size: 12px;
+              color: $primary;
+            }
           }
 
-          .down {
-            background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_472)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M12.4425 6.4425L9 9.8775L5.5575 6.4425L4.5 7.5L9 12L13.5 7.5L12.4425 6.4425Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_472"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-          }
-
-          .up {
-            background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-          }
-        }
-
-        .value {
-          grid-area: value;
-        }
-
-        .description-cont {
-          grid-area: description-cont;
-          display: none;
-          padding-left: 24px;
-          .description {
-            width: 100%;
-            height: 100%;
-            border-radius: $border-radius;
-            padding: 4px 8px;
-            background-color: $navbar-bg;
-            color: $primary;
-          }
-        }
-      }
-
-      // FR
-      .col3 {
-        display: grid;
-        grid-template-columns: 1fr auto;
-        grid-template-rows: 18px 36.47px auto;
-        grid-auto-columns: 1fr;
-        gap: 4px 4px;
-        grid-auto-flow: row;
-        justify-content: stretch;
-        align-content: stretch;
-        justify-item_customs: stretch;
-        align-item_customs: stretch;
-        grid-template-areas:
-          "field cta"
-          "value value"
-          "description-cont description-cont";
-
-        .field {
-          grid-area: field;
-
-          h6 {
-            font-size: 12px;
-            color: $primary;
+          .value {
+            grid-area: value;
           }
         }
 
-        .cta {
-          align-self: center;
-          grid-area: cta;
+        // PT
+        .col4 {
+          display: grid;
+          grid-template-columns: 1fr;
+          grid-template-rows: 18px auto;
+          grid-auto-columns: 1fr;
+          gap: 4px 4px;
+          grid-auto-flow: row;
+          justify-content: stretch;
+          align-content: stretch;
+          justify-item_customs: stretch;
+          align-item_customs: stretch;
+          grid-template-areas:
+            "field"
+            "value";
 
-          .i-arrow {
-            width: 18px;
-            height: 18px;
-            cursor: pointer;
+          .field {
+            grid-area: field;
+
+            h6 {
+              font-size: 12px;
+              color: $primary;
+            }
           }
 
-          .down {
-            background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_472)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M12.4425 6.4425L9 9.8775L5.5575 6.4425L4.5 7.5L9 12L13.5 7.5L12.4425 6.4425Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_472"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-          }
-
-          .up {
-            background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
+          .value {
+            grid-area: value;
           }
         }
 
-        .value {
-          grid-area: value;
+        .btn-group {
+          visibility: hidden;
         }
 
-        .description-cont {
-          grid-area: description-cont;
-          display: none;
-          padding-left: 24px;
-          .description {
-            width: 100%;
-            height: 100%;
-            border-radius: $border-radius;
-            padding: 4px 8px;
-            background-color: $navbar-bg;
-            color: $primary;
-          }
+        .fm-empty-container {
+          padding-top: 50px;
+        }
+
+        .fp-restrictions,
+        .dndupload-message {
+          font-size: 12px;
+        }
+
+        .dndupload-arrow {
+          height: 50px;
         }
       }
 
-      // PT
-      .col4 {
-        display: grid;
-        grid-template-columns: 1fr auto;
-        grid-template-rows: 18px 36.47px auto;
-        grid-auto-columns: 1fr;
-        gap: 4px 4px;
-        grid-auto-flow: row;
-        justify-content: stretch;
-        align-content: stretch;
-        justify-item_customs: stretch;
-        align-item_customs: stretch;
-        grid-template-areas:
-          "field cta"
-          "value value"
-          "description-cont description-cont";
-
-        .field {
-          grid-area: field;
-
-          h6 {
-            font-size: 12px;
-            color: $primary;
-          }
+      .description-cont {
+        grid-area: description-cont;
+        display: none;
+        padding-left: 24px;
+        .description {
+          width: 100%;
+          height: 100%;
+          border-radius: $border-radius;
+          padding: 4px 8px;
+          background-color: $navbar-bg;
+          color: $primary;
         }
-
-        .cta {
-          align-self: center;
-          grid-area: cta;
-
-          .i-arrow {
-            width: 18px;
-            height: 18px;
-            cursor: pointer;
-          }
-
-          .down {
-            background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_472)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M12.4425 6.4425L9 9.8775L5.5575 6.4425L4.5 7.5L9 12L13.5 7.5L12.4425 6.4425Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_472"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-          }
-
-          .up {
-            background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-          }
-        }
-
-        .value {
-          grid-area: value;
-        }
-
-        .description-cont {
-          grid-area: description-cont;
-          display: none;
-          padding-left: 24px;
-          .description {
-            width: 100%;
-            height: 100%;
-            border-radius: $border-radius;
-            padding: 4px 8px;
-            background-color: $navbar-bg;
-            color: $primary;
-          }
-        }
-      }
-
-      .btn-group {
-        visibility: hidden;
-      }
-
-      .fm-empty-container {
-        padding-top: 50px;
-      }
-
-      .fp-restrictions,
-      .dndupload-message {
-        font-size: 12px;
-      }
-
-      .dndupload-arrow {
-        height: 50px;
       }
     }
   }
