Update navbar logo
Rename navbar-logo-space1.png to navbarlogospace1.png because the code couldn't find the image

--- a/style/moodle.css
+++ b/style/moodle.css
@@ -5862,7 +5862,7 @@ body #page-wrapper #page #region-main {
 .navbar-brand::after {
   content: "";
   display: block;
-  background-image: url("theme/fos_space1/pix/navbar-logo-space1.png") !important;
+  background-image: url([[pix:theme|navbarlogospace1]]) !important;
   background-size: contain;
   background-repeat: no-repeat;
   width: 44px;
