--- a/style/scss/moodle.scss
+++ b/style/scss/moodle.scss
@@ -256,7 +256,7 @@ body {
 .navbar-brand::after {
   content: "";
   display: block;
-  background-image: url("theme/fos_space1/pix/navbar-logo-space1.png") !important;
+  background-image: url([[pix:theme|navbarlogospace1]]) !important;
   background-size: contain;
   background-repeat: no-repeat;
   width: 44px;
