--- a/style/moodle.css
+++ b/style/moodle.css
@@ -53,17 +53,6 @@
   transform: rotate(180deg);
 }
 
-/*
-@mixin font-size($font-size_owl) {
-  font-size: $font-size_owl;
-}
-*/
-/*
-#owl-carousel_slider {
-  @include font-size(1.8vw);
-  @include respond-to("up to 4K");
-}
-*/
 /*$custom-control-indicator-checked-disabled-bg: rgba(
   theme-color("primary"),
   0.5
@@ -1322,29 +1311,11 @@ h5 {
   width: auto;
   height: auto;
 }
-.svw-body .grid-table_sv {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 2px;
-  margin: 0 0 50px;
-}
-.svw-body .grid-table_sv .header {
-  background-color: #5c3873;
-  padding: 8px;
-  color: #fff;
-}
-.svw-body .grid-table_sv .data {
-  color: #5c3873;
-  background-color: #fff;
-  padding: 8px;
-  border: 1px solid #fff;
-}
 .svw-body .svw-cstm_frm {
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: auto;
   gap: 8px;
-  max-width: 800px;
   margin: 0 auto 50px;
 }
 .svw-body .svw-cstm_frm .item_custom {
@@ -1380,10 +1351,10 @@ h5 {
   font-size: 12px;
   color: #5c3873;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row1 .col1 .data-cnt {
+.svw-body .svw-cstm_frm .item_custom .cnt_row1 .col1 _ .data-cnt {
   grid-area: data-cnt;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row1 .col1 .data-cnt .data-item {
+.svw-body .svw-cstm_frm .item_custom .cnt_row1 .col1 _ .data-cnt .data-item {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr 1fr;
@@ -1412,10 +1383,10 @@ h5 {
   font-size: 12px;
   color: #5c3873;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row1 .col2 .data-cnt {
+.svw-body .svw-cstm_frm .item_custom .cnt_row1 .col2 _ .data-cnt {
   grid-area: data-cnt;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row1 .col2 .data-cnt .data-item {
+.svw-body .svw-cstm_frm .item_custom .cnt_row1 .col2 _ .data-cnt .data-item {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr 1fr;
@@ -1444,10 +1415,10 @@ h5 {
   font-size: 12px;
   color: #5c3873;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row2 .data-cnt {
+.svw-body .svw-cstm_frm .item_custom .cnt_row2 _ .data-cnt {
   grid-area: data-cnt;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row2 .data-cnt .data-item {
+.svw-body .svw-cstm_frm .item_custom .cnt_row2 _ .data-cnt .data-item {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr 1fr;
@@ -1476,10 +1447,10 @@ h5 {
   font-size: 12px;
   color: #5c3873;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row3 .data-cnt {
+.svw-body .svw-cstm_frm .item_custom .cnt_row3 _ .data-cnt {
   grid-area: data-cnt;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row3 .data-cnt .data-item {
+.svw-body .svw-cstm_frm .item_custom .cnt_row3 _ .data-cnt .data-item {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr 1fr;
@@ -1508,10 +1479,10 @@ h5 {
   font-size: 12px;
   color: #5c3873;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row4 .data-cnt {
+.svw-body .svw-cstm_frm .item_custom .cnt_row4 _ .data-cnt {
   grid-area: data-cnt;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row4 .data-cnt .data-item {
+.svw-body .svw-cstm_frm .item_custom .cnt_row4 _ .data-cnt .data-item {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr 1fr;
@@ -1548,10 +1519,10 @@ h5 {
   font-size: 12px;
   color: #5c3873;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row5 .col1 .data-cnt {
+.svw-body .svw-cstm_frm .item_custom .cnt_row5 .col1 _ .data-cnt {
   grid-area: data-cnt;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row5 .col1 .data-cnt .data-item {
+.svw-body .svw-cstm_frm .item_custom .cnt_row5 .col1 _ .data-cnt .data-item {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr 1fr;
@@ -1580,10 +1551,10 @@ h5 {
   font-size: 12px;
   color: #5c3873;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row5 .col2 .data-cnt {
+.svw-body .svw-cstm_frm .item_custom .cnt_row5 .col2 _ .data-cnt {
   grid-area: data-cnt;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row5 .col2 .data-cnt .data-item {
+.svw-body .svw-cstm_frm .item_custom .cnt_row5 .col2 _ .data-cnt .data-item {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr 1fr;
@@ -1612,10 +1583,10 @@ h5 {
   font-size: 12px;
   color: #5c3873;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row6 .data-cnt {
+.svw-body .svw-cstm_frm .item_custom .cnt_row6 _ .data-cnt {
   grid-area: data-cnt;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row6 .data-cnt .data-item {
+.svw-body .svw-cstm_frm .item_custom .cnt_row6 _ .data-cnt .data-item {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr 1fr;
@@ -1644,10 +1615,10 @@ h5 {
   font-size: 12px;
   color: #5c3873;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row7 .data-cnt {
+.svw-body .svw-cstm_frm .item_custom .cnt_row7 _ .data-cnt {
   grid-area: data-cnt;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row7 .data-cnt .data-item {
+.svw-body .svw-cstm_frm .item_custom .cnt_row7 _ .data-cnt .data-item {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr 1fr;
@@ -1676,10 +1647,10 @@ h5 {
   font-size: 12px;
   color: #5c3873;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row8 .data-cnt {
+.svw-body .svw-cstm_frm .item_custom .cnt_row8 _ .data-cnt {
   grid-area: data-cnt;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row8 .data-cnt .data-item {
+.svw-body .svw-cstm_frm .item_custom .cnt_row8 _ .data-cnt .data-item {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr 1fr;
@@ -1708,15 +1679,48 @@ h5 {
   font-size: 12px;
   color: #5c3873;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row9 .data-cnt {
+.svw-body .svw-cstm_frm .item_custom .cnt_row9 _ .data-cnt {
   grid-area: data-cnt;
 }
-.svw-body .svw-cstm_frm .item_custom .cnt_row9 .data-cnt .data-item {
+.svw-body .svw-cstm_frm .item_custom .cnt_row9 _ .data-cnt .data-item {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr 1fr;
   gap: 0px 8px;
 }
+.slst_body {
+  width: auto;
+  height: auto;
+}
+.slst_body .grid-table-slst {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 2px;
+  margin: 0 0 50px;
+}
+.slst_body .grid-table-slst .header_item {
+  background-color: #5c3873;
+  padding: 8px;
+  color: #fff;
+}
+.slst_body .grid-table-slst .item-mxw {
+  width: max-content;
+}
+.slst_body .grid-table-slst .item-hmxw {
+  background-color: transparent;
+  color: transparent;
+  width: max-content;
+}
+.slst_body .grid-table-slst .data-item {
+  color: #5c3873;
+  background-color: #fff;
+  padding: 8px;
+  border: 1px solid #fff;
+}
+.slst_body .grid-table-slst .data-item .menubar {
+  width: 24px;
+}
+
 .navbar.fixed-top {
   padding-top: 0;
   padding-bottom: 0;
