--- a/style/scss/layouts/_listview.scss
+++ b/style/scss/layouts/_listview.scss
@@ -21,15 +21,24 @@
       background-color: transparent;
       color: transparent;
       width: max-content;
-
     }
     .data-item {
       color: $primary;
-      background-color: $white;
+      @include apply-opacity($primary, 10);
       padding: 8px;
       border: 1px solid $white;
       .menubar {
         width: 24px;
+      }
+      .title {
+        float: left;
+        padding-right: 8px;
+      }
+      .upload_date {
+        clear: both;
+      }
+      .description {
+        clear: both;
       }
     }
   }
