add entry - list view

--- a/style/scss/layouts/_listview.scss
+++ b/style/scss/layouts/_listview.scss
@@ -4,7 +4,7 @@
 
   .grid-table-slst {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr) auto;
     grid-gap: 2px;
     margin: 0 0 50px;
 
@@ -14,12 +14,8 @@
       color: $white;
     }
 
-    .item-mxw {
-      width: max-content;
-    }
     .item-hmxw {
       background-color: transparent;
-      color: transparent;
       width: max-content;
     }
     .data-item {
