--- a/style/moodle.css
+++ b/style/moodle.css
@@ -509,7 +509,6 @@ h5 {
 }
 .custom_form .item_custom .cnt_row1 .col1 .field h6 {
   margin-left: 24px;
-  font-size: 12px;
   color: #5c3873;
 }
 .custom_form .item_custom .cnt_row1 .col1 .cta {
@@ -569,7 +568,6 @@ h5 {
   grid-area: field;
 }
 .custom_form .item_custom .cnt_row1 .col2 .field h6 {
-  font-size: 12px;
   color: #5c3873;
 }
 .custom_form .item_custom .cnt_row1 .col2 .cta {
@@ -629,7 +627,6 @@ h5 {
 }
 .custom_form .item_custom .cnt_row2 .field h6 {
   margin-left: 24px;
-  font-size: 12px;
   color: #5c3873;
 }
 .custom_form .item_custom .cnt_row2 .cta {
@@ -704,7 +701,6 @@ h5 {
 }
 .custom_form .item_custom .cnt_row3 .field h6 {
   margin-left: 24px;
-  font-size: 12px;
   color: #5c3873;
 }
 .custom_form .item_custom .cnt_row3 .cta {
@@ -759,7 +755,6 @@ h5 {
 }
 .custom_form .item_custom .cnt_row4 .field h6 {
   margin-left: 24px;
-  font-size: 12px;
   color: #5c3873;
 }
 .custom_form .item_custom .cnt_row4 .cta {
@@ -824,7 +819,6 @@ h5 {
 }
 .custom_form .item_custom .cnt_row5 .col1 .field h6 {
   margin-left: 24px;
-  font-size: 12px;
   color: #5c3873;
 }
 .custom_form .item_custom .cnt_row5 .col1 .cta {
@@ -879,7 +873,6 @@ h5 {
 }
 .custom_form .item_custom .cnt_row5 .col2 .field h6 {
   margin-left: 24px;
-  font-size: 12px;
   color: #5c3873;
 }
 .custom_form .item_custom .cnt_row5 .col2 .cta {
@@ -934,7 +927,6 @@ h5 {
 }
 .custom_form .item_custom .cnt_row6 .field h6 {
   margin-left: 24px;
-  font-size: 12px;
   color: #5c3873;
 }
 .custom_form .item_custom .cnt_row6 .cta {
@@ -954,21 +946,37 @@ h5 {
 }
 .custom_form .item_custom .cnt_row6 .value {
   grid-area: value;
+  /*
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0.5rem;
   justify-content: center;
   justify-items: start;
+
+  > div:first-child {
+    //title
+    .inline-req {
+      width: 24px;
+      float: left;
+    }
+
+    input[type="checkbox"]:nth-of-type(n + 3) {
+      margin-left: 24px;
+    }
+  }
+  > div:nth-child(2) {
+    input[type="checkbox"] {
+      margin-left: 0px;
+    }
+  }
+  */
 }
-.custom_form .item_custom .cnt_row6 .value > div:first-child .inline-req {
+.custom_form .item_custom .cnt_row6 .value .inline-req {
   width: 24px;
   float: left;
 }
-.custom_form .item_custom .cnt_row6 .value > div:first-child input[type=checkbox]:nth-of-type(n + 3) {
+.custom_form .item_custom .cnt_row6 .value input[type=checkbox]:nth-of-type(n + 3) {
   margin-left: 24px;
-}
-.custom_form .item_custom .cnt_row6 .value > div:nth-child(2) input[type=checkbox] {
-  margin-left: 0px;
 }
 .custom_form .item_custom .cnt_row6 .description-cont {
   grid-area: description-cont;
@@ -1001,7 +1009,6 @@ h5 {
 }
 .custom_form .item_custom .cnt_row7 .field h6 {
   margin-left: 24px;
-  font-size: 12px;
   color: #5c3873;
 }
 .custom_form .item_custom .cnt_row7 .cta {
@@ -1077,7 +1084,6 @@ h5 {
 }
 .custom_form .item_custom .cnt_row8 .field h6 {
   margin-left: 24px;
-  font-size: 12px;
   color: #5c3873;
 }
 .custom_form .item_custom .cnt_row8 .cta {
@@ -1097,78 +1103,48 @@ h5 {
 }
 .custom_form .item_custom .cnt_row8 .value {
   grid-area: value;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: auto;
+  gap: 4px;
+  padding-left: 24px;
 }
-.custom_form .item_custom .cnt_row8 .value .form-inline table {
+.custom_form .item_custom .cnt_row8 .value .value-rws {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: auto;
+  gap: 4px;
+}
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-link .form-inline table {
   border-collapse: collapse;
   margin: 0;
   width: 100%;
   table-layout: auto;
 }
-.custom_form .item_custom .cnt_row8 .value .form-inline table tbody {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-link .form-inline table tbody {
   border-collapse: collapse;
 }
-.custom_form .item_custom .cnt_row8 .value .form-inline table tbody th,
-.custom_form .item_custom .cnt_row8 .value .form-inline table tbody td {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-link .form-inline table tbody th,
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-link .form-inline table tbody td {
   border: none;
 }
-.custom_form .item_custom .cnt_row8 .value .form-inline table tbody th input,
-.custom_form .item_custom .cnt_row8 .value .form-inline table tbody td input {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-link .form-inline table tbody th input,
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-link .form-inline table tbody td input {
   width: 100%;
 }
-.custom_form .item_custom .cnt_row8 .value .form-inline table tbody tr td:first-child {
-  width: 60px;
-}
-.custom_form .item_custom .cnt_row8 .description-cont {
-  grid-area: description-cont;
-  display: none;
-  padding-left: 24px;
-}
-.custom_form .item_custom .cnt_row8 .description-cont .description {
-  width: 100%;
-  height: 100%;
-  border-radius: 0.25rem;
-  padding: 4px 8px;
-  background-color: #DDD3E1;
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-link .form-inline table tbody tr td:first-child {
+  width: 140px;
+  font-size: 14px;
   color: #5c3873;
 }
-.custom_form .item_custom .cnt_row9 {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files {
   display: grid;
-  grid-template-columns: 1fr auto;
-  grid-template-rows: 18px repeat(2, auto);
-  grid-auto-columns: 1fr;
-  gap: 4px 4px;
-  grid-auto-flow: row;
-  justify-content: stretch;
-  align-content: stretch;
-  justify-item_customs: stretch;
-  align-item_customs: stretch;
-  grid-template-areas: "field cta" "value-cont value-cont" "description-cont description-cont";
+  grid-template-columns: 1fr;
+  grid-auto-rows: auto;
+  gap: 8px;
+  padding: 16px;
 }
-.custom_form .item_custom .cnt_row9 .field {
-  grid-area: field;
-}
-.custom_form .item_custom .cnt_row9 .field h6 {
-  margin-left: 24px;
-  font-size: 12px;
-  color: #5c3873;
-}
-.custom_form .item_custom .cnt_row9 .cta {
-  align-self: center;
-  grid-area: cta;
-}
-.custom_form .item_custom .cnt_row9 .cta .i-arrow {
-  width: 18px;
-  height: 18px;
-  cursor: pointer;
-}
-.custom_form .item_custom .cnt_row9 .cta .down {
-  background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_472)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M12.4425 6.4425L9 9.8775L5.5575 6.4425L4.5 7.5L9 12L13.5 7.5L12.4425 6.4425Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_472"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-}
-.custom_form .item_custom .cnt_row9 .cta .up {
-  background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_402_489)"><rect width="18" height="18" rx="9" fill="%23383D47" fill-opacity="0.35"/><path d="M9 6L4.5 10.5L5.5575 11.5575L9 8.1225L12.4425 11.5575L13.5 10.5L9 6Z" fill="%23F9F2EA"/></g><defs><clipPath id="clip0_402_489"><rect width="18" height="18" rx="9" fill="white"/></clipPath></defs></svg>');
-}
-.custom_form .item_custom .cnt_row9 .value-cont {
-  grid-area: value-cont;
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -1178,7 +1154,7 @@ h5 {
   justify-item_customs: stretch;
   align-item_customs: stretch;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col1 {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col1 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 18px auto;
@@ -1191,17 +1167,16 @@ h5 {
   align-item_customs: stretch;
   grid-template-areas: "field" "value";
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col1 .field {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col1 .field {
   grid-area: field;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col1 .field h6 {
-  font-size: 12px;
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col1 .field h6 {
   color: #5c3873;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col1 .value {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col1 .value {
   grid-area: value;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col2 {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col2 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 18px auto;
@@ -1214,17 +1189,16 @@ h5 {
   align-item_customs: stretch;
   grid-template-areas: "field" "value";
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col2 .field {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col2 .field {
   grid-area: field;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col2 .field h6 {
-  font-size: 12px;
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col2 .field h6 {
   color: #5c3873;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col2 .value {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col2 .value {
   grid-area: value;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col3 {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col3 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 18px auto;
@@ -1237,17 +1211,16 @@ h5 {
   align-item_customs: stretch;
   grid-template-areas: "field" "value";
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col3 .field {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col3 .field {
   grid-area: field;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col3 .field h6 {
-  font-size: 12px;
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col3 .field h6 {
   color: #5c3873;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col3 .value {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col3 .value {
   grid-area: value;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col4 {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col4 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 18px auto;
@@ -1260,56 +1233,67 @@ h5 {
   align-item_customs: stretch;
   grid-template-areas: "field" "value";
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col4 .field {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col4 .field {
   grid-area: field;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col4 .field h6 {
-  font-size: 12px;
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col4 .field h6 {
   color: #5c3873;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .col4 .value {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .col4 .value {
   grid-area: value;
   border: none;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .btn-group {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .btn-group {
   visibility: hidden;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .fm-empty-container {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .fm-empty-container {
   padding-top: 50px;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .fp-restrictions,
-.custom_form .item_custom .cnt_row9 .value-cont .dndupload-message {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .fp-restrictions,
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .dndupload-message {
   font-size: 12px;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .dndupload-arrow {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .dndupload-arrow {
   height: 50px;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .fp-navbar {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .fp-navbar {
   border-top: 1px solid #5c3873 !important;
   border-right: 1px solid #5c3873 !important;
   border-left: 1px solid #5c3873 !important;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .filemanager-container {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .filemanager-container {
   border-right: 1px solid #5c3873 !important;
   border-left: 1px solid #5c3873 !important;
   border-bottom: 1px solid #5c3873 !important;
 }
-.custom_form .item_custom .cnt_row9 .value-cont .bg-faded,
-.custom_form .item_custom .cnt_row9 .value-cont .filemanager-container {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .bg-faded,
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-lang-file .filemanager-container {
   background-color: #fff;
 }
-.custom_form .item_custom .cnt_row9 .description-cont {
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-msg-files {
+  padding: 12px 0 0 24px;
+}
+.custom_form .item_custom .cnt_row8 .value .value-rws .value-files .value-msg-files div {
+  width: 100%;
+  padding: 8px 12px;
+  text-align: center;
+  color: #5c3873;
+  background-color: #fff;
+  border-radius: 6px;
+}
+.custom_form .item_custom .cnt_row8 .description-cont {
   grid-area: description-cont;
   display: none;
-  padding-left: 24px;
+  padding: 0 16px 0 24px;
 }
-.custom_form .item_custom .cnt_row9 .description-cont .description {
+.custom_form .item_custom .cnt_row8 .description-cont .description {
   width: 100%;
-  height: 100%;
+  height: auto;
   border-radius: 0.25rem;
   padding: 4px 8px;
   background-color: #DDD3E1;
   color: #5c3873;
+  margin: 0 0 4px;
 }
 
 .svw-body {
@@ -1699,7 +1683,7 @@ h5 {
 }
 .slst_body .grid-table-slst {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(5, 1fr) auto;
   grid-gap: 2px;
   margin: 0 0 50px;
 }
@@ -1708,12 +1692,8 @@ h5 {
   padding: 8px;
   color: #fff;
 }
-.slst_body .grid-table-slst .item-mxw {
-  width: max-content;
-}
 .slst_body .grid-table-slst .item-hmxw {
   background-color: transparent;
-  color: transparent;
   width: max-content;
 }
 .slst_body .grid-table-slst .data-item {
@@ -5982,6 +5962,10 @@ a.ygtvspacer:hover {
   padding-left: 5px;
 }
 
+.fp-restrictions span {
+  display: none;
+}
+
 .layout.fullscreen {
   background-color: #f3eff5;
 }
@@ -6259,6 +6243,11 @@ body #page-wrapper #page #region-main {
 
 #page.drawers {
   margin-top: 38px !important;
+}
+
+.dropdown a {
+  color: #5c3873;
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=moodle.css.map */
