--- a/style/moodle.css
+++ b/style/moodle.css
@@ -1297,15 +1297,19 @@ h5 {
 }
 
 .svw-body {
-  width: auto;
-  height: auto;
+  background-color: #f8f9fa;
+  border-radius: 6px;
+  padding: 8px;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  gap: 0px 8px;
 }
 .svw-body .svw-cstm_frm {
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: auto;
-  gap: 8px;
-  margin: 0 auto 50px;
+  gap: 4px;
+  border-radius: 6px;
 }
 .svw-body .svw-cstm_frm .item_custom {
   display: grid;
@@ -1315,7 +1319,7 @@ h5 {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr auto;
-  gap: 0px 8px;
+  gap: 0px 4px;
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row1 .col1 {
   display: grid;
@@ -1329,7 +1333,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: rgba(92, 56, 115, 0.1);
+  background-color: #e9ecef;
   border-radius: 6px;
   padding: 8px;
 }
@@ -1361,7 +1365,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: rgba(92, 56, 115, 0.1);
+  background-color: #e9ecef;
   border-radius: 6px;
   padding: 8px;
 }
@@ -1393,7 +1397,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: rgba(92, 56, 115, 0.1);
+  background-color: #e9ecef;
   border-radius: 6px;
   padding: 8px;
 }
@@ -1425,7 +1429,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: rgba(92, 56, 115, 0.1);
+  background-color: #e9ecef;
   border-radius: 6px;
   padding: 8px;
 }
@@ -1457,7 +1461,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: rgba(92, 56, 115, 0.1);
+  background-color: #e9ecef;
   border-radius: 6px;
   padding: 8px;
 }
@@ -1481,7 +1485,7 @@ h5 {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr auto;
-  gap: 0px 8px;
+  gap: 0px 4px;
   justify-content: stretch;
   align-content: stretch;
 }
@@ -1497,7 +1501,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: rgba(92, 56, 115, 0.1);
+  background-color: #e9ecef;
   border-radius: 6px;
   padding: 8px;
 }
@@ -1529,7 +1533,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: rgba(92, 56, 115, 0.1);
+  background-color: #e9ecef;
   border-radius: 6px;
   padding: 8px;
 }
@@ -1561,7 +1565,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: rgba(92, 56, 115, 0.1);
+  background-color: #e9ecef;
   border-radius: 6px;
   padding: 8px;
 }
@@ -1593,7 +1597,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: rgba(92, 56, 115, 0.1);
+  background-color: #e9ecef;
   border-radius: 6px;
   padding: 8px;
 }
@@ -1625,7 +1629,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: rgba(92, 56, 115, 0.1);
+  background-color: #e9ecef;
   border-radius: 6px;
   padding: 8px;
 }
@@ -1657,7 +1661,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: rgba(92, 56, 115, 0.1);
+  background-color: #e9ecef;
   border-radius: 6px;
   padding: 8px;
 }
